test/errors/traits/no_matching_instance_found/main.sk
module Main {

struct Foo {

}

protocol Bar[T] {
    fn bar(self) -> ()
}

struct Baz {

}

impl BarImpl Bar[Baz] {
    fn bar(self) -> () {

    }
}

// instance Bar[Foo] {
//     fn bar(self) -> () {

//     }
// }

fn main() {
    let f = Foo();
    f.bar();
}

}